--- a/styles/style.css
+++ b/styles/style.css
@@ -36,6 +36,14 @@ main {
     width: 50%;
     margin-right: 3%;
     display: flex;
+    justify-content: flex-end;
+}
+
+#container-left{
+    max-width: 500px;
+    position: static;
+    right: 0;
+    display: flex;
     flex-direction: column;
 }
 
@@ -55,15 +63,20 @@ h1 {
 
 #right {
     width: 50%;
-    max-width: 350px;
+    margin-left: 3%;
     height: 500px;
+    display: flex;
+    justify-content: flex-start;
+}
+
+#container-right {
     background-color: #8da8ff;
     display: flex;
     flex-direction: column;
     padding: 3%;
-    margin-left: 3%;
     border-radius: 15px;
     box-shadow: 20px 30px rgba(68, 92, 171, 30%);
+    max-width: 350px;
 }
 
 #img-churrascometro {
